2004-06-27  Julien Moutte  <julien@moutte.net>

	* sys/ximage/ximagesink.c: (gst_ximagesink_xwindow_decorate),
	(gst_ximagesink_xwindow_new):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xwindow_decorate),
	(gst_xvimagesink_xwindow_new): Trying to fix the random behaviour of
	window decorations.

2004-06-27  Wim Taymans  <wim@fluendo.com>

	* ext/dv/gstdvdec.c: (gst_dvdec_class_init), (gst_dvdec_init),
	(gst_dvdec_video_getcaps), (gst_dvdec_video_link),
	(gst_dvdec_push), (gst_dvdec_loop), (gst_dvdec_change_state),
	(gst_dvdec_set_property), (gst_dvdec_get_property):
	* ext/dv/gstdvdec.h:
	Implement drop_factor property to lower the framerate with
	a factor.

2004-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst-libs/gst/colorbalance/Makefile.am:
	* gst-libs/gst/mixer/Makefile.am:
	* gst-libs/gst/play/Makefile.am:
	* gst-libs/gst/tuner/Makefile.am:
	  unbreak Company's fix that didn't install the -enum.h files

2004-06-27  Wim Taymans  <wim@fluendo.com>

	* ext/dv/gstdvdec.c: (gst_dvdec_push), (gst_dvdec_loop),
	(gst_dvdec_change_state):
	* ext/dv/gstdvdec.h:
	Fix timestamp, duration and offset of the buffers.

2004-06-27  Wim Taymans  <wim@fluendo.com>

	* gst/tcp/gstmultifdsink.c: (gst_recover_policy_get_type),
	(gst_multifdsink_class_init), (gst_multifdsink_add),
	(gst_multifdsink_remove), (gst_multifdsink_clear),
	(gst_multifdsink_client_remove),
	(gst_multifdsink_handle_client_read),
	(gst_multifdsink_client_queue_data),
	(gst_multifdsink_client_queue_caps),
	(gst_multifdsink_client_queue_buffer),
	(gst_multifdsink_handle_client_write),
	(gst_multifdsink_recover_client), (gst_multifdsink_queue_buffer),
	(gst_multifdsink_handle_clients), (gst_multifdsink_thread),
	(gst_multifdsink_init_send), (gst_multifdsink_close):
	* gst/tcp/gstmultifdsink.h:
	* gst/tcp/gsttcpserversink.c:
	(gst_tcpserversink_handle_server_read),
	(gst_tcpserversink_handle_select), (gst_tcpserversink_close):
	More multifdsink fixes, more recovery policy fixes.